Rebase wxpython4 onto master (#3615)
* mysqlclient (#3604)

* Update analysis.py

* 3.1.5 (#3607)

* Update pinned_requirements.txt

* Don't upgrade when installing test dependencies

* Build should succeed even if unpinned fails

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,18 @@ cache:
   directories: $HOME/.cache/pip
 dist: trusty
 env:
-  - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD="" REQUIREMENTS_FILE="pinned_requirements.txt"
-  - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD="" REQUIREMENTS_FILE="requirements.txt"
+  global:
+    - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD=""
+  matrix:
+    - REQUIREMENTS_FILE="pinned_requirements.txt"
+    - REQUIREMENTS_FILE="requirements.txt"
 matrix:
   allow_failures:
-    env:
-      - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD="" REQUIREMENTS_FILE="requirements.txt"
+    - env: REQUIREMENTS_FILE="requirements.txt"
 install:
   - pip install -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-14.04 wxPython
   - pip install -r $REQUIREMENTS_FILE
-  - pip install --upgrade .[test]
+  - pip install .[test]
   - pip freeze
 language: python
 notifications:
