--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ joblib
 mahotas
 matplotlib>=2.0.0,!=2.1.0
 mysqlclient==1.3.13
-numpy
+numpy>=1.12.0
 prokaryote==2.4.0
 python-bioformats==1.4.0
 pyzmq==15.3.0
