--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ env:
   global:
     - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD=""
   matrix:
-    - REQUIREMENTS_FILE="pinned_requirements.txt"
+    - REQUIREMENTS_FILE="unpinned_requirements.txt"
     - REQUIREMENTS_FILE="requirements.txt"
 matrix:
   allow_failures:
-    - env: REQUIREMENTS_FILE="requirements.txt"
+    - env: REQUIREMENTS_FILE="unpinned_requirements.txt"
 install:
   - pip install -r $REQUIREMENTS_FILE
   - pip install .[test]
