--- a/Pipfile
+++ b/Pipfile
@@ -31,4 +31,4 @@ pytest = "==3.3.2"
 python_version = "2.7"
 
 [scripts]
-cellprofiler = "python -c 'import cellprofiler.__main__ as cp; cp.main()'"
+cellprofiler = "python -c 'import sys; import cellprofiler.__main__ as cp; sys.exit(cp.main())'"
