--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
-before_install:
-  - sudo apt-get install --yes libgstreamer-plugins-base1.0-0 libgstreamer-plugins-base1.0-dev libgstreamer1.0-0 libgstreamer1.0-dev libgtk-3-0 libgtk-3-dev libhdf5-serial-dev libjpeg-dev libnotify-dev libpng-dev libegl1-mesa-dev libgles2-mesa-dev libsdl2-dev libsm-dev libsm6 libtiff5 libtiff5-dev libwebkitgtk-3.0-dev freeglut3 freeglut3-dev python-dev python-mysqldb python-pip
+addons:
+  apt:
+    packages:
+      - libhdf5-serial-dev
+      - python-mysqldb
+      - python-pip
 cache:
   apt: true
   directories: $HOME/.cache/pip
@@ -8,13 +12,13 @@ env:
   global:
     - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD=""
   matrix:
-    - REQUIREMENTS_FILE="pinned_requirements.txt"
+    - REQUIREMENTS_FILE="unpinned_requirements.txt"
     - REQUIREMENTS_FILE="requirements.txt"
 matrix:
   allow_failures:
-    - env: REQUIREMENTS_FILE="requirements.txt"
+    - env: REQUIREMENTS_FILE="unpinned_requirements.txt"
+    - python: 3.6
 install:
-  - pip install -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-14.04 wxPython
   - pip install -r $REQUIREMENTS_FILE
   - pip install .[test]
   - pip freeze
@@ -25,7 +29,15 @@ notifications:
     secure: kDWVy90sDY+o3g0/ZTGX2D+PTbzhtd74Whe1AJHhcUDobTUzkch8GtY9eZxybZk4nga9lQxL6YeJ72SfBBEPaLzXcUMe0YcNaBydkQHcipKZn+Vcb8kf2FiZC6YwsUYfTvvH9MPLbkZOZvsNyd0h85z+hYMB8jHsq6Yn5gf79BA=
     on_failure: always
     on_success: change
-python: 2.7.12
+python:
+  - 2.7
+  - 3.6    
+before_script:
+  - pip install flake8
+  # stop the build if there are Python syntax errors or undefined names
+  - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
+  # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
+  - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 script: pytest
 services: mysql
 sudo: required
