Include libgtk-3-dev package

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ addons:
       - libhdf5-serial-dev
       - python-mysqldb
       - python-pip
+      - libgtk-3-dev
 cache:
   apt: true
   directories: $HOME/.cache/pip
