--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ addons:
       - python-mysqldb
       - python-pip
       - libgtk-3-dev
+      - libwebkit2gtk-4.0-37
+      - libgstreamer1.0-dev
 cache:
   apt: true
   directories: $HOME/.cache/pip
