Extra gstreamer packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,15 @@ addons:
       - python-pip
       - libgtk-3-dev
       - libgstreamer1.0-dev
+      - libgstreamer1.0-0 
+      - gstreamer1.0-plugins-base 
+      - gstreamer1.0-plugins-good 
+      - gstreamer1.0-plugins-bad 
+      - gstreamer1.0-plugins-ugly 
+      - gstreamer1.0-libav 
+      - gstreamer1.0-alsa 
+      - gstreamer1.0-gl 
+      - gstreamer1.0-gtk3
 cache:
   apt: true
   directories: $HOME/.cache/pip
