--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,7 @@ addons:
       - python-mysqldb
       - python-pip
       - libgtk-3-dev
-      - libgstreamer1.0-dev
-      - libgstreamer1.0-0 
-      - gstreamer1.0-plugins-base 
-      - gstreamer1.0-plugins-good 
-      - gstreamer1.0-plugins-bad 
-      - gstreamer1.0-plugins-ugly 
-      - gstreamer1.0-libav 
-      - gstreamer1.0-alsa 
+      - libgstreamer-plugins-base1.0-dev
 cache:
   apt: true
   directories: $HOME/.cache/pip
