Include link to wxpython wheel builds to avoid compilation

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
     - env: REQUIREMENTS_FILE="unpinned_requirements.txt"
     - python: 3.6
 install:
-  - pip install -r $REQUIREMENTS_FILE
+  - pip install -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-14.04/ -r $REQUIREMENTS_FILE
   - pip install .[test]
   - pip freeze
 language: python
