--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,20 @@
 version: 2
-  jobs:
-    build:
-     docker:
-      - image: circleci/python:2.7
-     steps:
+jobs:
+  build:
+    docker:
+      - image: ccircleci/python:2.7
+    steps:
       - checkout
-      - run: echo "A first hello"
+      - run: echo
+  test:
+    docker:
+      - image: circleci/python:2.7
+    steps:
+      - checkout
+      - run: echo
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test
