--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - checkout
       - run: sudo apt-get install default-jdk
-      - run: pip install -e .[test]
+      - run: pip install -editable .[test] --progress-bar off
 workflows:
   version: 2
   build_and_test:
