--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ jobs:
     steps:
       - checkout
       - run: sudo apt-get install default-jdk
-      - run: pip install --progress-bar off cython numpy
-      - run: pip install --progress-bar off .[test] 
+      - run: sudo -H pip install --progress-bar off cython numpy
+      - run: sudo -H pip install --progress-bar off .[test] 
 workflows:
   version: 2
   build_and_test:
