--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,12 @@ dist: trusty
 env:
   global:
     - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD=""
-  matrix:
-    - REQUIREMENTS_FILE="unpinned_requirements.txt"
-    - REQUIREMENTS_FILE="requirements.txt"
 matrix:
   allow_failures:
     - env: REQUIREMENTS_FILE="unpinned_requirements.txt"
     - python: 3.6
 install:
-  - pip install -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-14.04/ -r $REQUIREMENTS_FILE
+  - pip install -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-14.04/
   - pip install .[test]
   - pip freeze
 language: python
@@ -32,8 +29,7 @@ notifications:
     on_failure: always
     on_success: change
 python:
-  - 2.7
-  - 3.6    
+  - "3.7"
 before_script:
   - pip install flake8
   # stop the build if there are Python syntax errors or undefined names
