--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  test:
+  ubuntu-build-and-test:
     docker:
       - image: circleci/python:2.7
       - image: circleci/mysql:5.6
@@ -24,4 +24,4 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - test
+      - ubuntu-build-and-test
