--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,11 @@
 version: 2
 jobs:
+  macos-build-and-test:
+    macos:
+      xcode: "9.0"
+      steps:
+        - checkout
+        - echo
   ubuntu-build-and-test:
     docker:
       - image: circleci/python:2.7
