--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       xcode: "9.0"
       steps:
         - checkout
-        - echo
+        - run: echo
   ubuntu-build-and-test:
     docker:
       - image: circleci/python:2.7
