--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       CP_MYSQL_TEST_USER: "root"
     steps:
       - checkout
-      - run: sudo apt-get install default-jdk libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev
+      - run: sudo apt-get install openjdk-8-jdk libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev
       - run: sudo -H pip install --progress-bar off cython numpy
       - run: sudo -H pip install --find-links https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxpython
       - run: sudo -H pip install --progress-bar off .[test]
