--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: circleci/python:2.7
       - image: circleci/mysql:5.6
+      - image: circleci/openjdk:8
         command: [--default-authentication-plugin=mysql_native_password]
         environment:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
@@ -15,8 +16,6 @@ jobs:
       CP_MYSQL_TEST_USER: "root"
     steps:
       - checkout
-      - run: sudo add-apt-repository ppa:webupd8team/java && sudo apt update
-      - run: sudo apt install oracle-java8-installer
       - run: sudo apt-get install libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev
       - run: sudo -H pip install --progress-bar off cython numpy
       - run: sudo -H pip install --find-links https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxpython
