--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
       CP_MYSQL_TEST_USER: "root"
     steps:
       - checkout
-      - run: sudo apt-get install libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev
+      - run: sudo apt-get install libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev 
       - run: sudo -H pip install --progress-bar off cython numpy
-      - run: sudo -H pip install --find-links https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxpython
+      - run: sudo -H pip install --find-links https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 python-wxgtk3.0
       - run: sudo -H pip install --progress-bar off .[test]
       - run: py.test
 workflows:
