--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,11 @@ jobs:
       CP_MYSQL_TEST_HOST: "127.0.0.1"
       CP_MYSQL_TEST_PASSWORD: ""
       CP_MYSQL_TEST_USER: "root"
+      JAVA_HOME: "/usr/lib/jvm/java-8-openjdk-amd64"
     steps:
       - checkout
-      - run: sudo apt-get install libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev 
+      - run: sudo apt-get install libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev python-wxgtk3.0
       - run: sudo -H pip install --progress-bar off cython numpy
-      - run: sudo -H pip install --find-links https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 python-wxgtk3.0
       - run: sudo -H pip install --progress-bar off .[test]
       - run: py.test
 workflows:
