--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       JAVA_HOME: "/usr/lib/jvm/java-8-openjdk-amd64"
     steps:
       - checkout
-      - run: whereis java
+      - run: which java
       - run: sudo apt-get install libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev python-wxgtk3.0
       - run: sudo -H pip install --progress-bar off cython numpy
       - run: sudo -H pip install --progress-bar off .[test]
