--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,6 @@ jobs:
   ubuntu-build-and-test:
     docker:
       - image: circleci/python:2.7
-      - image: circleci/openjdk:8u181-jdk
       - image: circleci/mysql:5.6
         command: [--default-authentication-plugin=mysql_native_password]
         environment:
@@ -14,11 +13,10 @@ jobs:
       CP_MYSQL_TEST_HOST: "127.0.0.1"
       CP_MYSQL_TEST_PASSWORD: ""
       CP_MYSQL_TEST_USER: "root"
-      JAVA_HOME: "/usr/lib/jvm/java-8-openjdk-amd64"
     steps:
       - checkout
-      - run: which java
-      - run: sudo apt-get install libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev python-wxgtk3.0
+      - run: sudo apt-cache search openjdk
+      - run: sudo apt-get install openjdk-8-jdk libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev python-wxgtk3.0
       - run: sudo -H pip install --progress-bar off cython numpy
       - run: sudo -H pip install --progress-bar off .[test]
       - run: py.test
