--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,10 @@ jobs:
       CP_MYSQL_TEST_HOST: "127.0.0.1"
       CP_MYSQL_TEST_PASSWORD: ""
       CP_MYSQL_TEST_USER: "root"
+      JAVA_HOME: "/usr/bin/java"
     steps:
       - checkout
       - run: sudo apt-get install openjdk-11-jdk libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev python-wxgtk3.0
-      - run: whereis java
       - run: sudo -H pip install --progress-bar off cython numpy
       - run: sudo -H pip install --progress-bar off .[test]
       - run: py.test
