--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,9 @@ jobs:
       CP_MYSQL_TEST_HOST: "127.0.0.1"
       CP_MYSQL_TEST_PASSWORD: ""
       CP_MYSQL_TEST_USER: "root"
-      JAVA_HOME: "/usr/lib/jvm/java-11-openjdk"
     steps:
       - checkout
-      - run: sudo apt-get install openjdk-11-jdk libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev python-wxgtk3.0
+      - run: sudo apt-get install default-jdk libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev python-wxgtk3.0
       - run: sudo -H pip install --progress-bar off cython numpy
       - run: sudo -H pip install --progress-bar off .[test]
       - run: py.test
