--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,10 @@ jobs:
       - run: sudo apt-get install default-jdk libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev python-wxgtk3.0
       - run: sudo -H pip install --progress-bar off cython numpy
       - run: sudo -H pip install --progress-bar off .[test]
+      - run: git clone https://github.com/LeeKamentsky/python-javabridge.git
+      - run: cd python-javabridge
+      - run: sudo pip install -e .
+      - run: cd ..
       - run: py.test
 workflows:
   version: 2
