--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,7 @@ jobs:
       - checkout
       - run: sudo apt-get install default-jdk libgstreamer-plugins-base1.0-dev libgtk-3-dev libhdf5-serial-dev python-wxgtk3.0
       - run: sudo -H pip install --progress-bar off cython numpy
-      - run: git clone https://github.com/LeeKamentsky/python-javabridge.git
-      - run: cd python-javabridge
-      - run: sudo pip install -e .
-      - run: cd ..
+      - run: git clone https://github.com/LeeKamentsky/python-javabridge.git && cd python-javabridge && sudo pip install -e .
       - run: sudo -H pip install --progress-bar off .[test]
       - run: py.test
 workflows:
