--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -12,7 +12,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Installation
-      run: python -m pip install --upgrade pip && pip install -e .[test]
+      run:
+        |
+        python -m pip install --upgrade pip
+        pip install numpy
+        pip install -e .[test]
     - name: Test
       run: pytest
 name: nucleus
