--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -7,7 +7,7 @@ jobs:
         python-version: [3.7]
     steps:
     - uses: actions/checkout@v1
-    - name: Setup (Python ${{ matrix.python-version }})
+    - name: Setup Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
