--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
 *.egg-info/
 *.iml
 *.pyc
-.DS_Store
+*.swp
+*venv/
 .cache/
+.DS_Store
 .eggs/
 .idea/
+.mypy_cache/
+.pytest_cache/
 .python-version
-*.swp
+.vscode/
 build/
 dist/
-frozen_version.py
-plugins/
 docs/source/help
 docs/source/images
-.pytest_cache/
-*venv/
+frozen_version.py
+pip-wheel-metadata/
+plugins/
 settings.json
 venv/
-*venv/
-.vscode/
-pip-wheel-metadata/
