--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Installation
       run: |
         python -m pip install --upgrade pip
+        pip install numpy
         pip install --editable .[build,test]
     - name: Test
       run: |
