--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,3 +19,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - run: python --version
       - run: git clone https://github.com/CellProfiler/distribution.git
+      - if: ${{ matrix.os == 'macos-10.15' }}
+        run: make
+        working-directory: ./distribution
