--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ['macos-10.15', 'ubuntu-20.04', 'windows-2019']
+        os: [macos-10.15, ubuntu-20.04, windows-2019]
         python-version: [ '3.8' ]
     steps:
       - uses: actions/checkout@v2
@@ -20,5 +20,4 @@ jobs:
       - run: python --version
       - run: git clone https://github.com/CellProfiler/distribution.git
       - if: ${{ matrix.os == 'macos-10.15' }}
-        run: make
-        working-directory: ./distribution
+        run: cd distribution && make
