--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,3 +22,8 @@ jobs:
       - if: ${{ matrix.os == 'macos-10.15' }}
         run: make
         working-directory: ./distribution/macos
+      - if: ${{ matrix.os == 'ubuntu-20.04' }}
+        run:
+      - if: ${{ matrix.os == 'windows-2019' }}
+        run: 
+        working-directory: ./distribution/windows
