--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         run: make
         working-directory: ./distribution/macos
       - if: ${{ matrix.os == 'ubuntu-20.04' }}
-        run:
+        run: echo
       - if: ${{ matrix.os == 'windows-2019' }}
-        run: 
+        run: cls
         working-directory: ./distribution/windows
