--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
       - run: pip install --editable .
         working-directory: pyinstaller
       - run: git clone https://github.com/CellProfiler/distribution.git
+      - run: pip install numpy
       - if: ${{ matrix.os == 'macos-10.15' }}
         run: make
         working-directory: ./distribution/macos
