--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,9 @@ jobs:
       - run: pip install numpy
       - if: ${{ matrix.os == 'macos-10.15' }}
         run: brew install mysql
-      - if: ${{ matrix.os == 'macos-10.15' }}
+      - env:
+          LDFLAGS: -L/usr/local/opt/mysql-client/lib
+        if: ${{ matrix.os == 'macos-10.15' }}
         run: make
         working-directory: ./distribution/macos
       - if: ${{ matrix.os == 'ubuntu-20.04' }}
