--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,9 +40,11 @@ jobs:
         run: echo
       - if: ${{ matrix.os == 'windows-2019' }}
         run: |
-          echo "Installing dependencies"
-          pip install mysqlclient
-          pip install -e .
+          echo %JAVA_HOME%
+          java -XshowSettings:properties -version
+          #echo "Installing dependencies"
+          #pip install mysqlclient
+          #pip install -e .
       - if: ${{ matrix.os == 'windows-2019' }}
         run: |
           echo "Freezing CellProfiler"
