--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,11 +40,12 @@ jobs:
         run: echo
       - if: ${{ matrix.os == 'windows-2019' }}
         run: |
+          echo "::set-env name=JAVA_HOME::C:\hostedtoolcache\windows\jdk\14.0.1\x64"
           echo %JAVA_HOME%
-          java -XshowSettings:properties -version
+          #java -XshowSettings:properties -version
           #echo "Installing dependencies"
-          #pip install mysqlclient
-          #pip install -e .
+          pip install mysqlclient
+          pip install -e .
       - if: ${{ matrix.os == 'windows-2019' }}
         run: |
           echo "Freezing CellProfiler"
