openssl on macos

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,8 +29,8 @@ jobs:
         working-directory: pyinstaller
       - run: git clone https://github.com/CellProfiler/distribution.git
       - run: pip install numpy
-#      - if: ${{ matrix.os == 'macos-10.15' }}
-#        run: brew install mysql
+      - if: ${{ matrix.os == 'macos-10.15' }}
+        run: brew install mysql
       - env:
           LDFLAGS: -L/usr/local/opt/openssl/lib
         if: ${{ matrix.os == 'macos-10.15' }}
