--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,26 +29,26 @@ jobs:
         working-directory: pyinstaller
       - run: git clone https://github.com/CellProfiler/distribution.git
       - run: pip install numpy
-      - if: ${{ matrix.os == 'macos-10.15' }}
-        run: brew install mysql
       - env:
           LDFLAGS: -L/usr/local/opt/openssl/lib
         if: ${{ matrix.os == 'macos-10.15' }}
-        run: make
+        run: |
+          brew install mysql
+          make
         working-directory: ./distribution/macos
-#      - if: ${{ matrix.os == 'ubuntu-20.04' }}
-#        run: echo
-#      - if: ${{ matrix.os == 'windows-2019' }}
-#        run: |
-#          echo %JAVA_HOME%
-#          #java -XshowSettings:properties -version
-#          #echo "Installing dependencies"
-#          pip install mysqlclient
-#          pip install -e .
-#        env:
-#          JAVA_HOME: C:\hostedtoolcache\windows\jdk\14.0.1\x64
-#      - if: ${{ matrix.os == 'windows-2019' }}
-#        run: |
-#          echo "Freezing CellProfiler"
-#          pyinstaller cellprofiler.spec
-#        working-directory: ./distribution/windows
+      - if: ${{ matrix.os == 'ubuntu-20.04' }}
+        run: echo
+      - if: ${{ matrix.os == 'windows-2019' }}
+        run: |
+          echo %JAVA_HOME%
+          #java -XshowSettings:properties -version
+          #echo "Installing dependencies"
+          pip install mysqlclient
+          pip install -e .
+        env:
+          JAVA_HOME: C:\hostedtoolcache\windows\jdk\14.0.1\x64
+      - if: ${{ matrix.os == 'windows-2019' }}
+        run: |
+          echo "Freezing CellProfiler"
+          pyinstaller cellprofiler.spec
+        working-directory: ./distribution/windows
