--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,13 +40,11 @@ jobs:
         run: echo
       - if: ${{ matrix.os == 'windows-2019' }}
         run: |
-          echo %JAVA_HOME%
-          echo $JAVA_HOME
           echo "Installing dependencies"
           pip install mysqlclient
           pip install -e .
         env:
-          JAVA_HOME: C:\hostedtoolcache\windows\jdk\14.0.1\x64
+          JDK_HOME: C:\hostedtoolcache\windows\jdk\14.0.1\x64
       - if: ${{ matrix.os == 'windows-2019' }}
         run: |
           echo "Freezing CellProfiler"
