--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
       - if: ${{ matrix.os == 'windows-2019' }}
         run: |
           echo "Installing dependencies"
+          pip install cython
           pip install mysqlclient
           pip install -e .
         env:
