--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: |
-        sudo apt-get install --yes gtk+-3.0
+        sudo apt-get install --yes libgtk-3-dev
     - name: Setup Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
