--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,15 +12,12 @@ jobs:
         python-version: [3.8]
     steps:
     - uses: actions/checkout@v2
-    - run: |
-        sudo apt install libgtk-3-dev
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+    - uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Installation
-      run: |
+    - run: |
         python -m pip install --upgrade pip
+        pip install -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython==4.0.7.post2
         pip install numpy
         pip install --editable .[build,test]
     - name: Test
