--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - run: |
         python -m pip install --upgrade pip
-        pip install -f https://extras.wxpython.org/wxPython4/extras/linux/gtk2/ubuntu-18.04 wxPython==4.0.7.post2
+        pip install -f https://extras.wxpython.org/wxPython4/extras/linux/gtk2/ubuntu-18.04 wxPython==4.1.0
         pip install numpy
         pip install --editable .[build,test]
     - name: Test
