--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           architecture: x64
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.8'
       - uses: actions/setup-java@v1
         with:
           java-version: '14.0.1'
