--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -70,17 +70,27 @@ jobs:
       - if: ${{ matrix.os == 'macos-10.15' }}
         uses: actions/upload-artifact@v1
         with:
-          name: macos_artifact
+          name: CellProfiler.app
           path: ./distribution/macos/dist/CellProfiler.app
       - if: ${{ matrix.os == 'windows-2019' }}
         uses: actions/upload-artifact@v1
         with:
-          name: windows_artifact
+          name: CellProfiler.exe
           path: ./distribution/windows/Output/CellProfiler.exe
     strategy:
       matrix:
         os: [macos-10.15, windows-2019]
         python-version: [ "3.8" ]
+  upload:
+    name: upload
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v1
+        with:
+          name: CellProfiler.app
+      - uses: actions/download-artifact@v1
+        with:
+          name: CellProfiler.exe
 name: create-release
 on:
   push:
