--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -40,6 +40,7 @@ jobs:
         run: |
           brew install mysql
           make
+          ditto -ck --keepParent --rsrc --sequesterRsrc ./dist/CellProfiler.app ./dist/CellProfiler.zip
         working-directory: ./distribution/macos
       - env:
           JDK_HOME: C:\hostedtoolcache\windows\jdk\14.0.1\x64
@@ -55,8 +56,8 @@ jobs:
       - if: ${{ matrix.os == 'macos-10.15' }}
         uses: actions/upload-artifact@v1
         with:
-          name: CellProfiler.app
-          path: ./distribution/macos/dist/CellProfiler.app
+          name: CellProfiler-macOS.zip
+          path: ./distribution/macos/dist/CellProfiler.zip
       - if: ${{ matrix.os == 'windows-2019' }}
         uses: actions/upload-artifact@v1
         with:
@@ -91,9 +92,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: actions/upload-release-asset@v1
         with:
-          asset_content_type: application/app
-          asset_name: CellProfiler.app
-          asset_path: ./CellProfiler.app
+          asset_content_type: application/zip
+          asset_name: CellProfiler-macOS.zip
+          asset_path: ./CellProfiler-macOS.zip
           upload_url: ${{ steps.create_release.outputs.upload_url }}
       - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
